#361 fix z-index of repeater blocks

--- a/src/base/blocks/services/block.css
+++ b/src/base/blocks/services/block.css
@@ -23,6 +23,7 @@
     .price-block {
       background-color: #f5f5f5;
       height: 100%;
+      z-index: 1;
 
       hr {
         margin: 0 auto;
@@ -53,7 +54,6 @@
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
       margin: -20px -8px 0;
       position: relative;
-      z-index: 9;
       background-color: #fff;
 
       .popular-block {
